# libc

./: .gitmodules  init.c  meson.build
crt/: crt0.S  meson.build
include/: assert.h  ctype.h  elf.h  errno.h  limits.h  locale.h  math.h  meson.build  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  time.h
include/sys/: auxv.h
libc/: assert.c  auxv.h  compiler.h  ctype.c  errno.c  heap.c  locale.c  main.c  meson.build  printf.c  scanf.c  setjmp.S  signal.c  stdio.c  stdio.p.h  stdlib.c  stdlib.p.h  string.c  time.c
rtld/: main.c  meson.build  object.c  object.h  start.S  start.c
src/: auxv.c  compiler.h  main.c  meson.build  string.c
